test-data/unit/check-python310.test
[case testSimpleMatch]
# flags: --python-version 3.10
class A: ...
class B: ...
a: A
m: object

match m:
    case ["quit"]:
        a = B()  # E: Incompatible types in assignment (expression has type "B", variable has type "A")
    case ["look"]:
        a = A()

reveal_type(a)


[case testMatchAs]
# flags: --python-version 3.10
class A: ...
m: object

match m:
    case [x] as a:
        reveal_type(a)
        reveal_type(x)


[case testMatchOr]
# flags: --python-version 3.10
class A: ...
m: object

match m:
    case [x] | (x):
        reveal_type(x)
